# chat-memory

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  MCP.md  alembic.ini  mcp_server.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_memory_schema.py  0002_vector_indexes.py  0003_ingest_jobs.py  0004_entities.py  0005_labeled_by.py  0006_relationships.py  0007_memory_trust_model.py  0008_supersede_chain.py  0009_index_superseded_by.py  0010_episode_content_fts.py
backend/app/: auth.py  config.py  db.py  llm.py  main.py  mcp_auth.py  models.py
backend/app/api/routes/: chat.py  entities.py  graph.py  health.py  memories.py  quiz.py  style.py  uploads.py
backend/app/ingest/: exif.py  forget.py  geocode.py  pipeline.py  takeout.py  vision.py
backend/app/memory/: chat.py  embeddings.py  entities.py  graph.py  lineage.py  onboarding.py  pipeline.py  prompts.py  retrieval.py  style.py
backend/eval/: README.md  __init__.py  common.py  judge.py  loader.py  metrics.py  run.py
backend/eval/configs/: __init__.py  full_context.py  naive_rag.py  ours.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_dialogue_recall.py  test_entities.py  test_forget.py  test_geocode.py  test_graph.py  test_health.py  test_ingest.py  test_lineage.py  test_mcp_auth.py  test_pipeline.py  test_quiz.py  test_retrieval.py  test_style.py  test_takeout.py
frontend/: build.ts  components.json  package.json  tsconfig.json  vercel.json
frontend/src/: App.tsx  frontend.tsx  (+3 more)
(+26 files in other folders)
