[project]
name = "chat-memory-backend"
version = "0.1.0"
description = "Memory layer service: episodic + semantic memory for AI assistants"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.7",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "alembic>=1.14",
    "openai>=1.60",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.pyrefly]
# point the IDE's type checker at the project venv, not the global Python
python-interpreter-path = ".venv/Scripts/python.exe"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]